--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <a class="nav-link pr-5 " href="#aboutme" >ABOUT ME </a>
                 </li>
                 <li class="nav-item animate__animated animate__fadeInDown " style="animation-delay: 2s;"  id="linker">
-                  <a class="nav-link pr-5 " href="#contactid" title="feedback" >SAY HELLO </a>
+                  <a class="nav-link pr-5 " href="http://dfeedback.rf.gd/#" title="feedback" >SAY HELLO </a>
                 </li>
              </ul>
       </div>
@@ -208,7 +208,10 @@
 
 
                               <!--footer start-->
+<div class="container-fluid text-center pb-4 feedback">
+  <a href="http://dfeedback.rf.gd/#" >FEEDBACK/SUGGESTION</a>
 
+</div>
             
 
 <section class="foot">
