--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
 
                               <!--footer start-->
-<div class="container-fluid text-center pb-4 feedback">
+<div class="container text-center pb-4 feedback">
   <a href="http://dfeedback.rf.gd/#" >FEEDBACK/SUGGESTION</a>
 
 </div>
