--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body  oncontextmenu="return false;">
  
 
-    <div class="header " id="topheader">
+    <div class="header navibar" id="topheader">
  
-        <nav class="navbar navbar-expand-lg navbar-light bg-fadded"  >
+        <nav class="navbar navbar-expand-lg navbar-light bg-fadded "  >
           <a class="navbar-brand pl-4 logo animate__animated animate__zoomIn ml-n4" style="animation-delay: 1s;  animation-duration: 3s;"><img src="Pimages/Screenshot (18).png"  alt="logo"></a>
       
           <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
