--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="navbar-brand pl-4 logo animate__animated animate__zoomIn ml-n4" style="animation-delay: 1s;  animation-duration: 3s;"><img src="Pimages/Screenshot (18).png"  alt="logo"></a>
       
           <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon" ></span>
+            <i class="fa fa-bars fa-2x"></i>
           </button>
         
           <div class="collapse navbar-collapse " id="navbarSupportedContent">
