--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body  oncontextmenu="return false;">
- 
+<!-- using div tag  -->
 
     <div class="header navibar" id="topheader">
  
